--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -404,7 +404,7 @@ button:hover, .button:hover {
 
 .hero__image {
   position: relative;
-  background-image: url("/images/bg-intro-mobile.svg");
+  background-image: url("./images/bg-intro-mobile.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -436,7 +436,7 @@ button:hover, .button:hover {
     content: "";
     position: absolute;
     height: 100%;
-    background-image: url("/images/bg-intro-desktop.svg");
+    background-image: url("./images/bg-intro-desktop.svg");
     background-repeat: no-repeat;
     background-position: center bottom;
     width: 150%;
@@ -450,7 +450,7 @@ button:hover, .button:hover {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("/images/image-mockups.png");
+  background-image: url("./images/image-mockups.png");
   background-size: 95%;
   background-repeat: no-repeat;
   background-position: center bottom;
@@ -610,7 +610,7 @@ button:hover, .button:hover {
 }
 
 .article__image {
-  background-image: url("/images/image-currency.jpg");
+  background-image: url("./images/image-currency.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   position: center center;
