--- a/app/scss/_article.scss
+++ b/app/scss/_article.scss
@@ -32,7 +32,7 @@
     }
 
     &__image{
-        background-image: url('./images/image-currency.jpg');
+        background-image: url('../images/image-currency.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         position: center center;
