--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -404,7 +404,7 @@ button:hover, .button:hover {
 
 .hero__image {
   position: relative;
-  background-image: url("../images/bg-intro-mobile.svg");
+  background-image: url("https://raw.githubusercontent.com/Herrius/landing_page_easy_bank_challenge/60a9b16ef479fc3ffe9315380ce5bc425bb24661/app/images/bg-intro-mobile.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -436,7 +436,7 @@ button:hover, .button:hover {
     content: "";
     position: absolute;
     height: 100%;
-    background-image: url("../images/bg-intro-desktop.svg");
+    background-image: url("https://raw.githubusercontent.com/Herrius/landing_page_easy_bank_challenge/60a9b16ef479fc3ffe9315380ce5bc425bb24661/app/images/bg-intro-desktop.svg");
     background-repeat: no-repeat;
     background-position: center bottom;
     width: 150%;
@@ -450,7 +450,7 @@ button:hover, .button:hover {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("../images/image-mockups.png");
+  background-image: url("https://raw.githubusercontent.com/Herrius/landing_page_easy_bank_challenge/main/app/images/image-mockups.png");
   background-size: 95%;
   background-repeat: no-repeat;
   background-position: center bottom;
